--- a/spring-mvc/mudi/src/main/resources/templates/home.html
+++ b/spring-mvc/mudi/src/main/resources/templates/home.html
@@ -2,17 +2,35 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<link 
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+			crossorigin="anonymous"
+		>
 		<title>Mudi Home</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
 	<body>
 		<div class="container">
-			<div class="card" th:each="order: ${ ordersList }">
+			<div class="jumbotron mb-0">
+				<h1 class="display-10">Meus Pedidos</h1>
+			</div>
+			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
+				<div class="navbar-nav">
+					<a class="nav-item nav-link active" href="">Todos</a>
+					<a class="nav-item nav-link" href="">Aguardando</a>
+					<a class="nav-item nav-link" href="">Aprovados</a>
+					<a class="nav-item nav-link" href="">Entregues</a>
+				</div>
+				<a href="/order/form">
+					<button class="btn btn-outline-secondary my-2 my-sm-0">Novo</button>
+				</a>
+			</nav>
+			<div class="card mb-3" th:each="order: ${ ordersList }">
 				<div class="card-header" th:text="${ order.name }">Nome do Produto</div>
 				<div class="card-body">
 					<div class="row">
 						<div class="col-12 col-sm-8 mb-3">
-							<div class="row">
+							<div class="row"> 
 								<div class="col-md-5">
 									Valor: 
 									<span th:text="${ order.orderValue }">200,99</span>
