--- a/spring-mvc/mudi/src/main/resources/templates/home.html
+++ b/spring-mvc/mudi/src/main/resources/templates/home.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset='utf-8'>
-		<link 
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-			crossorigin="anonymous"
-		>
-		<title>Mudi Home</title>
-	</head>
+	<head th:replace="~{base :: head('Home')}"></head>
 	<body>
+		<div th:replace="~{base :: logo}"></div>
 		<div class="container">
-			<div class="jumbotron mb-0">
-				<h1 class="display-10">Meus Pedidos</h1>
-			</div>
+			<div th:replace="~{base :: pageTitle('Meus Pedidos')}"></div>
 			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
 				<div class="navbar-nav">
 					<a class="nav-item nav-link active" href="">Todos</a>
