--- a/spring-mvc/mudi/src/main/resources/templates/home.html
+++ b/spring-mvc/mudi/src/main/resources/templates/home.html
@@ -7,28 +7,32 @@
 			<div th:replace="~{base :: pageTitle('Meus Pedidos')}"></div>
 			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
 				<div class="navbar-nav">
-					<a class="nav-item nav-link active" href="">Todos</a>
-					<a class="nav-item nav-link" href="">Aguardando</a>
-					<a class="nav-item nav-link" href="">Aprovados</a>
-					<a class="nav-item nav-link" href="">Entregues</a>
+					<a th:classappend="${status} == null ? 'active'" class="nav-item nav-link" href="/home">Todos</a>
+					<a th:classappend="${status} == 'AGUARDANDO' ? 'active'" class="nav-item nav-link" href="/home/aguardando">Aguardando</a>
+					<a th:classappend="${status} == 'APROVADO' ? 'active'" class="nav-item nav-link" href="/home/aprovado">Aprovados</a>
+					<a th:classappend="${status} == 'ENTREGUE' ? 'active'" class="nav-item nav-link" href="/home/entregue">Entregues</a>
 				</div>
 				<a href="/order/form">
 					<button class="btn btn-outline-secondary my-2 my-sm-0">Novo</button>
 				</a>
 			</nav>
 			<div class="card mb-3" th:each="order: ${ ordersList }">
-				<div class="card-header" th:text="${ order.name }">Nome do Produto</div>
+				<th:block th:switch="${order.status.name()}">
+					<div th:case="'AGUARDANDO'" class="card-header alert-warning" th:text="${ order.name }">Nome do Produto</div>
+					<div th:case="'APROVADO'" class="card-header alert-success" th:text="${ order.name }">Nome do Produto</div>
+					<div th:case="'ENTREGUE'" class="card-header alert-dark" th:text="${ order.name }">Nome do Produto</div>
+				</th:block>
 				<div class="card-body">
 					<div class="row">
 						<div class="col-12 col-sm-8 mb-3">
 							<div class="row"> 
 								<div class="col-md-5">
 									Valor: 
-									<span th:text="${ order.orderValue }">200,99</span>
+									<span th:if="${ order.orderValue } != null" th:text="${'R$ ' + #numbers.formatDecimal(order.orderValue, 3, 'POINT', 2, 'COMMA') }">200,99</span>
 								</div>
 								<div class="col-md-7">
 									Data da entrega: 
-									<span th:text="${ order.deliveryDate }">10/02/2020</span>
+									<span th:text="${ #temporals.format(order.deliveryDate, 'dd/MM/yyyy') }">10/02/2020</span>
 								</div>
 							</div>
 							<div>Produto</div>
