--- a/spring-mvc/mudi/src/main/resources/templates/base.html
+++ b/spring-mvc/mudi/src/main/resources/templates/base.html
@@ -24,7 +24,18 @@
 
 <div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
 	<span class="logo">mudi</span>
-	<span class="mt-3">login</span>
+	<span class="mt-3">
+		<a href="/login" sec:authorize="!isAuthenticated()" class="text-light">Login</a>
+		<a 
+			href="#" 
+			onclick="document.querySelector('#form-login').submit()"
+			sec:authorize="isAuthenticated()"
+			class="text-light"
+		>
+			Logout
+		</a>
+		<form id="form-login" th:action="@{/logout}" method="post"></form>
+	</span>
 </div>
 
 <div th:fragment="pageTitle(value)" class="jumbotron mb-0">
