--- a/spring-mvc/mudi/src/main/resources/templates/order/form.html
+++ b/spring-mvc/mudi/src/main/resources/templates/order/form.html
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div th:replace="~{base :: pageTitle('Novo Pedido')}"></div>
 			<div class="card mt-3">
-				<form th:object="${requestNewOrderDTO}" class="card-body" action="/order/new" method="post">
+				<form th:object="${requestNewOrderDTO}" class="card-body" th:action="@{/order/new}" method="post">
 					<div class="form-group">
 						<label for="productName">Produto</label>
 						<input th:field="*{productName}" th:errorclass="is-invalid" class="form-control" placeholder="nome do produto" />
