--- a/spring-mvc/mudi/src/main/resources/templates/base.html
+++ b/spring-mvc/mudi/src/main/resources/templates/base.html
@@ -22,22 +22,32 @@
 	<title th:text="${value}">Título</title>
 </head>
 
-<div th:fragment="logo" class="logo-container mb-3 p-3 d-flex justify-content-between">
-	<span class="logo">mudi</span>
-	<span class="mt-3">
-		<a href="/login" sec:authorize="!isAuthenticated()" class="text-light">Login</a>
-		<a 
-			href="#" 
-			onclick="document.querySelector('#form-login').submit()"
-			sec:authorize="isAuthenticated()"
-			class="text-light"
-		>
-			Logout
-		</a>
-		<form id="form-login" th:action="@{/logout}" method="post"></form>
-	</span>
+<div th:fragment="logo" class="">
+	<div class="row logo-container p-3 d-flex justify-content-between">
+		<span class="logo ml-2">mudi</span>
+		<span class="mt-3 mr-2">
+			<a href="/login" sec:authorize="!isAuthenticated()" class="text-light">Login</a>
+			<a 
+				href="#" 
+				onclick="document.querySelector('#form-login').submit()"
+				sec:authorize="isAuthenticated()"
+				class="text-light"
+			>
+				Logout
+			</a>
+			<form id="form-login" th:action="@{/logout}" method="post"></form>
+		</span>
+	</div>
+	<div class="row" sec:authorize="isAuthenticated()">
+		<div class="col" >
+			<nav class="nav">
+				<a class="nav-link" aria-current="page" th:href="@{/home}">Home</a>
+				<a class="nav-link" th:href="@{/user/order}">Meus Pedidos</a>
+			  </nav>
+		</div>
+	</div>
 </div>
 
-<div th:fragment="pageTitle(value)" class="jumbotron mb-0">
+<div th:fragment="pageTitle(value)" class="jumbotron mb-2 mt-2">
 	<h1 class="display-10" th:text="${value}">Título</h1>
 </div>
