--- a/spring-mvc/mudi/src/main/resources/templates/user/home.html
+++ b/spring-mvc/mudi/src/main/resources/templates/user/home.html
@@ -4,9 +4,24 @@
 	<body>
 		<div th:replace="~{base :: logo}"></div>
 		<div class="container">
-			<div th:replace="~{base :: pageTitle('Últimos Pedidos')}"></div>
+			<div th:replace="~{base :: pageTitle('Meus Pedidos')}"></div>
+			<nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-between mb-3">
+				<div class="navbar-nav">
+					<a th:classappend="${status} == null ? 'active'" class="nav-item nav-link" th:href="@{/user/order}">Todos</a>
+					<a th:classappend="${status} == 'AGUARDANDO' ? 'active'" class="nav-item nav-link" th:href="@{/user/order/aguardando}">Aguardando</a>
+					<a th:classappend="${status} == 'APROVADO' ? 'active'" class="nav-item nav-link" th:href="@{/user/order/aprovado}">Aprovados</a>
+					<a th:classappend="${status} == 'ENTREGUE' ? 'active'" class="nav-item nav-link" th:href="@{/user/order/entregue}">Entregues</a>
+				</div>
+				<a href="/order/form">
+					<button class="btn btn-outline-secondary my-2 my-sm-0">Novo</button>
+				</a>
+			</nav>
 			<div class="card mb-3" th:each="order: ${ ordersList }">
-				<div class="card-header alert-dark" th:text="${ order.name }">Nome do Produto</div>
+				<th:block th:switch="${order.status.name()}">
+					<div th:case="'AGUARDANDO'" class="card-header alert-warning" th:text="${ order.name }">Nome do Produto</div>
+					<div th:case="'APROVADO'" class="card-header alert-success" th:text="${ order.name }">Nome do Produto</div>
+					<div th:case="'ENTREGUE'" class="card-header alert-dark" th:text="${ order.name }">Nome do Produto</div>
+				</th:block>
 				<div class="card-body">
 					<div class="row">
 						<div class="col-12 col-sm-8 mb-3">
