--- a/spring-mvc/mudi/src/main/resources/templates/base.html
+++ b/spring-mvc/mudi/src/main/resources/templates/base.html
@@ -23,7 +23,7 @@
 </head>
 
 <div th:fragment="logo" class="">
-	<div class="row logo-container p-3 d-flex justify-content-between">
+	<div class="logo-container p-3 d-flex justify-content-between">
 		<span class="logo ml-2">mudi</span>
 		<span class="mt-3 mr-2">
 			<a href="/login" sec:authorize="!isAuthenticated()" class="text-light">Login</a>
@@ -38,11 +38,12 @@
 			<form id="form-login" th:action="@{/logout}" method="post"></form>
 		</span>
 	</div>
-	<div class="row" sec:authorize="isAuthenticated()">
+	<div sec:authorize="isAuthenticated()">
 		<div class="col" >
 			<nav class="nav">
 				<a class="nav-link" aria-current="page" th:href="@{/home}">Home</a>
 				<a class="nav-link" th:href="@{/user/order}">Meus Pedidos</a>
+				<a class="nav-link" th:href="@{/offer}">Faça sua Oferta</a>
 			  </nav>
 		</div>
 	</div>
